Another jumping nav fix

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,6 @@ body {
   font-size: 1.6rem;
   font-family: "DM Sans", sans-serif;
   color: #000;
-  user-select: none;
 }
 
 img {
