--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,7 +6,6 @@ body {
   font-size: 1.6rem;
   font-family: $ff-main;
   color: $clr-primary-900;
-  user-select: none;
 }
 
 img {
